terraform/nat.tf
# TODO: Implement a NAT Instance rather than a NAT Gateway

resource "aws_eip" "nat" {
  domain = "vpc"

  tags = {
    Name = "${local.env}-nat"
  }
}

resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.public_zone1.id

  tags = {
    Name = "${local.env}-net"
  }

  depends_on    = [aws_internet_gateway.igw]    # Wait until the IGW is created/provisioned
}
